--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ canvas {
 }
 
 body {
+  transition: opacity 0.5s ease-in-out;
     background-image: url('resources/main-ui/menu-background@2x.jpg');
 background-repeat: no-repeat;
     background-size: cover;
@@ -18,54 +19,72 @@ background-repeat: no-repeat;
     background-color:#0478fc;
 }
 
+.fade-in {
+  opacity: 0;
+}
 #circle {
-    z-index: 1;
-    animation: heartbeat 1.5s ease-in-out infinite;
-    transition: margin-right 0.1s ease;
-    width: 600px;
-    height: 600px;
-    border-radius: 50%;
-    background-image: url('resources/main-ui/menu-osu@2x.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  z-index: 1;
+  animation: heartbeat 1.5s ease-in-out infinite;
+  transition: margin-right 0.2s ease;
+  width: 720px;
+  height: 720px;
+  border-radius: 50%;
+  background-image: url('resources/main-ui/menu-osu@2x.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  }
+}
+
+
   .container {
     position: absolute;
-    top: 50%;
+    top: 46%;
     left: 50%;
     transform: translate(-50%, -50%);
     
   }
   
-  #options {
+  #main-menu {
     z-index: -6;
     display: none;
     position: absolute;
-    left: 380px;
+    left: 400px;
     top: 70px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
   }
   
-  #options ul {
+
+  
+  #main-menu ul {
     list-style: none;
     margin: 0;
     padding: 0;
   }
   
-  #options li {
-    transition: padding-right 0.2s ease-out;
+  #main-menu li {
+    transition: padding-right 0.3s ease-out, background-image 0.2s ease;
 cursor: pointer;
-width: 670px;
-height: 105px;
-margin-top: 10px;
+width: 870px;
+height: 130px;
+margin-top: 20px;
+
   }
+
+  #main-menu li:hover {
+    padding-right: 120px;
+    width: 870px;
+
+margin-right: -120px;
+}
+
   
   .circle-shifted {
-    margin-right: 400px;
+    margin-right: 600px;
   }
   
   .play {
@@ -115,6 +134,7 @@ margin-top: 10px;
   }
   .exit:hover {
     background-image: url('resources/main-ui/menu-button-exit-over@2x.png');
+    
   }
 
 
@@ -167,18 +187,13 @@ margin-top: 10px;
     background-image: url('resources/main-ui/menu-button-exit-back@2x.png');
   }
 
-  #options li:hover {
-    padding-right: 120px;
-    width: 670px;
-height: 105px;
-}
 
 
 @keyframes heartbeat {
     0% {
         transform: scale(1);
     }
-    75% {
+    90% {
         transform: scale(1.05);
     }
     100% {
@@ -186,43 +201,60 @@ height: 105px;
     }
 }
 
+
+
+
 .profile-card {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 7px;
+    left: 7px;
+    width: 447px;
     display: flex;
     align-items: center;
     font-family: Arial, sans-serif;
     color: white;
+    background-color: transparent;
+    transition: background-color 0.3s ease;
+    border-radius: 4px;
+    padding-right: 7px;
   }
-  
+  .profile-card:hover {
+    background-color: rgba(255, 255, 255, 0.411);
+  }
   .profile-card img {
-    width: 90px;
-    height: 90px;
+    width: 105px;
+    height: 105px;
     border-radius: 2%;
-    margin-right: 10px;
+    margin: 2px  10px  2px 2px ;
   }
   
   .profile-info {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+
   }
   
   .name {
     font-size: 1.6em;
-
+    top: -1px;
+position:absolute;
   }
   
   .score,
   .accuracy {
-    font-size: 1em;
+    font-size: 1.2em;
+    margin-right: -10px;
+  }
+  .score {
+    margin-top: 8px;
   }
   
   .level {
-    display: flex;
+
+    position: absolute;
     align-items: center;
-    font-size: 1em;
+    font-size: 1.2em;
+    bottom: 0;
   }
   
   .level .label {
@@ -230,13 +262,15 @@ height: 105px;
   }
   
   .level-bar {
-    width: 200px;
-    height: 6px;
+    width: 270px;
+    height: 10px;
     border-style: solid;
-
-    border-width: 2px;
-    border-color: #ddd;
-    border-radius: 5px;
+left: 53px;
+bottom: 3px;
+position: absolute;
+    border-width: 0.2rem;
+    border-color: #ffffff9f;
+    border-radius: 50px;
     overflow: hidden;
   }
   
@@ -253,40 +287,41 @@ height: 105px;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-end;
-    padding: 5px;
+    padding: 2px;
+    margin-right: 8px;
   }
   
   .buttons {
+    background-color:#ffffff00;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
     align-items: center;
-    margin-bottom: 5px;
+
+    
   }
   
   .square {
-    width: 35px;
-    height: 35px;
-
-    margin: 5px;
+    width: 55px;
+    height: 55px;
     border: none;
     outline: none;
     cursor: pointer;
   }
   
   .seek-bar {
-    margin-right: 7px;
-    width: 305px;
+
+    width: 315px;
   }
   
   .slider {
     -webkit-appearance: none;
     appearance: none;
-    width: 100%;
+    width: 98%;
     height: 7px;
     background: rgb(255, 255, 255);
     outline: none;
-    opacity: 0.1;
+    opacity: 0.12;
     -webkit-transition: .2s;
     transition: opacity .2s;
   }
@@ -304,56 +339,75 @@ height: 105px;
     background-color: blue;
   }
 
+  .music-jumpto,
+  .music-info,
+  .music-pause,
+  .music-play,
+  .music-rewind,
+  .music-stop,
+  .music-ff {
+    width: 45px;
+    height: 45px;
+    background-color: #ffffff00;
+    background-position: center center;
+    transition: transform 0.1s ease-in-out;
+  }
+  
   .music-jumpto {
     background-image: url('resources/main-ui/editor-button-jumpto@2x.png');
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: center center;
   }
-
+  
   .music-info {
     background-image: url('resources/main-ui/editor-button-info@2x.png');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
   }
+  
   .music-pause {
     background-image: url('resources/main-ui/editor-button-pause@2x.png');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
   }
-
+  
   .music-play {
     background-image: url('resources/main-ui/editor-button-play@2x.png');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
   }
-
+  
   .music-rewind {
     background-image: url('resources/main-ui/editor-button-rewind@2x.png');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
   }
-
+  
   .music-stop {
     background-image: url('resources/main-ui/editor-button-stop@2x.png');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
   }
-
+  
   .music-ff {
     background-image: url('resources/main-ui/editor-button-ff@2x.png');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
   }
+  
+  .music-jumpto:hover,
+  .music-info:hover,
+  .music-pause:hover,
+  .music-play:hover,
+  .music-rewind:hover,
+  .music-stop:hover,
+  .music-ff:hover {
+    transform: scale(1.2);
+  }
+  
   .logo-container {
     position: fixed;
-    bottom: 5px;
+    bottom: 1px;
     left: 5px;
     transition: transform 0.3s ease-in-out;
   }
@@ -365,7 +419,7 @@ height: 105px;
   }
   
   .logo-container img {
-height: 40px;
+height: 44px;
 filter: hue-rotate(60deg);
 transition: transform 0.3s ease-in-out;
   }
@@ -403,3 +457,125 @@ padding: 10px;
     background-size: cover;
     background-position: center center;
   }
+
+  .osudirect {
+    background-image: url('resources/main-ui/menu-osudirect@2x.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    right: 0px;
+top: 28%;
+bottom: 50%;
+height: 400px;
+    transition: background-image 0.5s ease;
+width: 70px;
+    position: absolute;
+
+  }
+
+  .osudirect:hover {
+    background-image: url('resources/main-ui/menu-osudirect-over@2x.png');
+    transition: background-image 0.5s ease;
+  }
+
+  #loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: black;
+    opacity: 1;
+    z-index: 9999;
+    transition: opacity 0.5s, height 0.5s 2s;
+  }
+  
+  #tips {
+    position: fixed;
+    top: 70%;
+    left: 0;
+    width: 100%;
+    height: 40px; 
+    background-color: rgba(0, 0, 0, 0.5); 
+    color: #fff;
+    text-align: center;
+    font-size: 30px;
+    line-height: 50px; 
+    padding-bottom: 10px;
+    
+  }
+  
+  #tips-text {
+    animation: changeText 5s linear infinite;
+  }
+  
+  @keyframes changeText {
+    0% { content: "First Text"; }
+    50% { content: "Second Text"; } 
+    100% { content: "Third Text"; } 
+  }
+  
+
+  #fadeContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s, visibility 0.5s;
+    z-index: 9999;
+  }
+  
+  #cursor {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    background: url('resources/cursor@2x.png') no-repeat;
+    background-size: contain;
+    animation: rotate 5s infinite linear;
+    cursor: none;
+  }
+
+  #cursor:active {
+    width: 60px;
+    height: 60px;
+    animation: none;
+  }
+
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  .pulse {
+    width: 720px;
+    height: 720px;
+    border-radius: 50%;
+z-index: -10;
+    position: absolute;
+    background-image: url("resources/main-ui/menu-osu-shockwave@2x.png");
+    background-size: cover;
+    animation: radarAnimation 1.25s linear infinite;
+  }
+  
+  @keyframes radarAnimation {
+    0% {
+      transform: scale(1);
+      opacity: 1;
+    }
+
+
+    100% {
+      transform: scale(1.3);
+      opacity: 0;
+    }
+  }
+  
+  
