--- a/options/style.css
+++ b/options/style.css
@@ -30,6 +30,7 @@ background-repeat: no-repeat;
   }
   
   .topnav a {
+    font-weight: bold;
     margin-top: 80px;
 width: 170px;
 height: 25px;
@@ -38,7 +39,7 @@ height: 25px;
     color: #f2f2f2;
     margin-right: -10px;
     text-align: center;
-    background-color: #fe6345;
+    background-color: #dc143b;
     padding: 2px 14px;
     border-style: none;
     border-color:#333;
@@ -59,7 +60,7 @@ height: 25px;
   }
   
   .topnav a:hover {
-    background-color: #fd9999;
+    background-color: #d8526d;
     color: rgb(255, 255, 255);
   }
   
@@ -100,7 +101,7 @@ height: 25px;
 
 
 width: 270px;
-    top: 637px;
+    top: 690px;
     left: 0;
   }
   
@@ -130,3 +131,13 @@ width: 270px;
     z-index: 9999;
   }
   
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity to control the dimming effect */
+    z-index: -10; /* Place the overlay behind the content */
+  }
+
